--- a/front/src/stylesheets/_app.scss
+++ b/front/src/stylesheets/_app.scss
@@ -7,14 +7,14 @@
 }
 
 .App-header {
-  background-color: #192e57;
+  background-color: #9fb4df;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: top;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 a {
