--- a/front/src/stylesheets/_app.scss
+++ b/front/src/stylesheets/_app.scss
@@ -6,8 +6,7 @@
   text-align: center;
   background-color: #9bbbff;
   min-height: 100vh;
-
-
+  font-family: 'Lato', sans-serif;
 }
 
 .App-header {
