--- a/front/src/components/navbar/Navbar.css
+++ b/front/src/components/navbar/Navbar.css
@@ -18,13 +18,12 @@
 }
 
 .logo2 {
-	position: absolute;
-	display: inline-block;
-	top: 0px;
-	right:44%;
+	position: fixed;
+	/* display: inline-block; */
+  top: 5px;
+	left: 30px;
 }
 
 .logo-nav {
-	padding-top: 20px;
-	height: 70px;
+	height: 50px;
 }
