--- a/front/src/stylesheets/_app.scss
+++ b/front/src/stylesheets/_app.scss
@@ -7,6 +7,7 @@
   background-color: #9bbbff;
   min-height: 100vh;
   font-family: 'Lato', sans-serif;
+  padding-bottom: 120px;
 }
 
 .App-header {
